<resources>
    <string name="app_name">LetsBuy</string>
    <string name="insert">Вс</string>
    <string name="refresh">Обновить</string>
    <string name="add">Добавить</string>
    <string name="name">Название</string>
    <string name="photo">Фото</string>
    <string name="save">Сохранить</string>
    <string name="back_to_list">Назад</string>
    <string name="edit">Редактирование</string>
    <string name="delete">Удалить</string>
    <string name="id">ID</string>
    <string name="list">Список</string>
    <string name="nameList">Имя списка</string>
    <string name="search">Список</string>
    <string name="action_save">Сохранить</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_delete">Удалить</string>
    <string name="action_edit">Редактирование</string>
    <string name="fab_behavior_name">net.sytes.kai_soft.letsbuyka.FABHideOnScroll</string>
    <string name="product">Название</string>
    <string name="description">Комментарий</string>
    <string name="products">Продукты</string>
    <string name="emptyProduct">Новый продукт</string>
    <string name="lists">Мои списки</string>
    <string name="emptyList">Новый список</string>
    <string name="emptyListNow">Список пока пуст.</string>
    <string name="action_products">Мои продукты</string>
    <string name="action_products_list">Мои списки</string>
    <string name="deleteList">Удалить список?</string>
    <string name="deleteProduct">Удалить продукт?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="e_mail">E-Mail: </string>
    <string name="password">Пароль:</string>
    <string name="signIn">Войти</string>
    <string name="signInU"><u>Уже есть аккаунт?</u></string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="signUpU"><u>Зарегистрироваться</u></string>
    <string name="hintPassword">••••••••</string>
    <string name="hintEMail">example@example.com</string>
    <string name="wrongLogPass">Логин или пароль введен неправильно</string>
    <string name="forgotPassword"><u>Забыли пароль?</u></string>
    <string name="repeatPassword">Повторите пароль:</string>
    <string name="passwordsNotSame">Пароли не совпадают</string>
    <string name="credentialException">Такой e-mail не существует</string>
    <string name="passwordException">Пароль должен иметь более шести символов</string>
    <string name="emailAlreadyInUseException">Введённые e-mail уже используется</string>
    <string name="noNetworkException">Нет интернет-соединения</string>
    <string name="ok">Ок</string>
    <string name="verifyEmail">Подтвердите адрес почты</string>
    <string name="signedIn">Вход</string>
    <string name="emailHasNotGiven">Введите e-mail</string>
    <string name="passHasNotGiven">Введите пароль</string>


    <string-array name="productsList">
        <item>"Абрикос"</item>
        <item>"Авокадо"</item>
        <item>"Ананас"</item>
        <item>"Апельсины"</item>
        <item>"Аптека"</item>
        <item>"Арбуз"</item>
        <item>"Базилик"</item>
        <item>"Баклажаны"</item>
        <item>"Бананы"</item>
        <item>"Батарейки"</item>

        <item>"Бекон"</item>
        <item>"Бинт"</item>
        <item>"Блок питания"</item>
        <item>"Брокколи"</item>
        <item>"Булка"</item>
        <item>"Валерианка"</item>
        <item>"Васаби"</item>
        <item>"Ватные диски"</item>
        <item>"Ватные палочки"</item>
        <item>"Ветчина"</item>

        <item>"Виноград"</item>
        <item>"Влажные салфетки"</item>
        <item>"Вода"</item>
        <item>"Гель для душа"</item>
        <item>"Говядина"</item>
        <item>"Горох"</item>
        <item>"Горчица"</item>
        <item>"Грейпфрут"</item>
        <item>"Гречка"</item>
        <item>"Грибы"</item>

        <item>"Груши"</item>
        <item>"Губка"</item>
        <item>"Дезодорант"</item>
        <item>"Дрожжи"</item>
        <item>"Дыня"</item>
        <item>"Жевательная резинка"</item>
        <item>"Замороженные овощи"</item>
        <item>"Зелёный горошек"</item>
        <item>"Зелень"</item>
        <item>"Зубная паста"</item>

        <item>"Зубная щётка"</item>
        <item>"Зубочистки"</item>
        <item>"Изюм"</item>
        <item>"Икра"</item>
        <item>"Имбирь"</item>
        <item>"Индейка"</item>
        <item>"Йогурт"</item>
        <item>"Йод"</item>
        <item>"К чаю"</item>
        <item>"Кабачки"</item>

        <item>"Капуста"</item>
        <item>"Картофель"</item>
        <item>"Каша"</item>
        <item>"Квас"</item>
        <item>"Кетчуп"</item>
        <item>"Кефир"</item>
        <item>"Кинза"</item>
        <item>"Кокос"</item>
        <item>"Колбаса"</item>
        <item>"Конфеты"</item>

        <item>"Кофе"</item>
        <item>"Крабовые палочки"</item>
        <item>"Креветки"</item>
        <item>"Кресла"</item>
        <item>"Кукуруза"</item>
        <item>"Купаты"</item>
        <item>"Курага"</item>
        <item>"Курица"</item>
        <item>"Лаваш"</item>
        <item>"Лавровый лист"</item>

        <item>"Лампочки"</item>
        <item>"Лимон"</item>
        <item>"Лимонад"</item>
        <item>"Лук"</item>
        <item>"Майонез"</item>
        <item>"Макароны"</item>
        <item>"Манго"</item>
        <item>"Мандарины"</item>
        <item>"Маслины"</item>
        <item>"Масло растительное"</item>

        <item>"Масло сливочное"</item>
        <item>"Мёд"</item>
        <item>"Молоко"</item>
        <item>"Морковь"</item>
        <item>"Мороженое"</item>
        <item>"Моцарелла"</item>
        <item>"Мука"</item>
        <item>"Мыло"</item>
        <item>"Мюсли"</item>
        <item>"Мясо"</item>

        <item>"Нектарины"</item>
        <item>"Овощи"</item>
        <item>"Овсянка"</item>
        <item>"Огурцы"</item>
        <item>"Оливки"</item>
        <item>"Орехи"</item>
        <item>"Освежитель воздуха"</item>
        <item>"От комаров"</item>
        <item>"Пакеты"</item>
        <item>"Пармезан"</item>

        <item>"Паштет"</item>
        <item>"Пеотмени"</item>
        <item>"Перец болгарский"</item>
        <item>"Персики"</item>
        <item>"Перчатки"</item>
        <item>"Перчики"</item>
        <item>"Песок"</item>
        <item>"Петрушка"</item>
        <item>"Печень"</item>
        <item>"Печенье"</item>

        <item>"Пирог"</item>
        <item>"Пирожное"</item>
        <item>"Пластырь"</item>
        <item>"Плитка"</item>
        <item>"Помидоры"</item>
        <item>"Приправы"</item>
        <item>"Прокладки"</item>
        <item>"Простокваша"</item>
        <item>"Пшено"</item>
        <item>"Редис"</item>

        <item>"Репа"</item>
        <item>"Рис"</item>
        <item>"Роллы"</item>
        <item>"Руккола"</item>
        <item>"Рыба"</item>
        <item>"Ряженка"</item>
        <item>"Салат"</item>
        <item>"Салфетки"</item>
        <item>"Сахар"</item>
        <item>"Свёкла"</item>

        <item>"Свинина"</item>
        <item>"Сгущёное молоко"</item>
        <item>"Сельдерей"</item>
        <item>"Сельдь"</item>
        <item>"Семечки"</item>
        <item>"Сливки"</item>
        <item>"Сливы"</item>
        <item>"Сметана"</item>
        <item>"Соевый соус"</item>
        <item>"Сок"</item>

        <item>"Соль"</item>
        <item>"Сосиски"</item>
        <item>"Специи"</item>
        <item>"Средство для бритья"</item>
        <item>"Средство для посуды"</item>
        <item>"Средство для туалета"</item>
        <item>"Средство после бритья"</item>
        <item>"Стиральный порошок"</item>
        <item>"Сухарики"</item>
        <item>"Сухофрукты"</item>

        <item>"Суши"</item>
        <item>"Сыр"</item>
        <item>"Сыр плавленый"</item>
        <item>"Сырки"</item>
        <item>"Творог"</item>
        <item>"Томатная паста"</item>
        <item>"Торт"</item>
        <item>"Туалетная бумага"</item>
        <item>"Укроп"</item>
        <item>"Уксус"</item>

        <item>"Уксус яблочный"</item>
        <item>"Фарш"</item>
        <item>"Фасоль"</item>
        <item>"Фильтр для воды"</item>
        <item>"Фисташки"</item>
        <item>"Фольга"</item>
        <item>"Фруктоза"</item>
        <item>"Фрукты"</item>
        <item>"Хлеб"</item>
        <item>"Хлопья"</item>

        <item>"Хрен"</item>
        <item>"Хурма"</item>
        <item>"Чай"</item>
        <item>"Чернослив"</item>
        <item>"Чеснок"</item>
        <item>"Чечевица"</item>
        <item>"Чизкейк"</item>
        <item>"Чипсы"</item>
        <item>"Шампиньоны"</item>
        <item>"Шампунь"</item>

        <item>"Шоколад"</item>
        <item>"Шпроты"</item>
        <item>"Яблоки"</item>
        <item>"Ягоды"</item>
        <item>"Яйца"</item>
    </string-array>



</resources>
