<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProductModel.ProductsActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:visible="true"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_done_black_24dp"
        android:title="@string/action_save"
        android:visible="false"/>
    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_clear_black_24dp"
        android:title="@string/action_cancel"
        android:visible="false"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never"
        android:visible="false"/>

</menu>